--- a/.github/workflows/studio.yml
+++ b/.github/workflows/studio.yml
@@ -54,6 +54,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: ${{ steps.pkgman.outputs.cache }}
+          cache-dependency-path: vepic/vepic-main/package-lock.json
 
       - name: Install dependencies
         run: ${{ steps.pkgman.outputs.package_manager }} install
