--- a/.github/workflows/studio.yml
+++ b/.github/workflows/studio.yml
@@ -59,8 +59,8 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.pkgman.outputs.package_manager }} install
 
-      - name: Generate
-        run: ${{ steps.pkgman.outputs.package_manager }} run build
+      - name: Generate static files
+        run: ${{ steps.pkgman.outputs.package_manager }} run generate
         env:
           NITRO_PRESET: github_pages
           NUXT_CONTENT_PREVIEW_API: https://api.nuxt.studio
@@ -70,4 +70,4 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: vepic/vepic-main/.output/public
+          folder: vepic/vepic-main/dist
