--- a/.github/workflows/studio.yml
+++ b/.github/workflows/studio.yml
@@ -3,25 +3,19 @@ name: studio-nuxt-build
 run-name: studio nuxt build
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches:
       - 'main'
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Add write workflow permissions
 permissions:
   contents: write
 
-# Allow one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
 
 jobs:
-  # Build job
   build-and-deploy:
     runs-on: ${{ matrix.os }}
     defaults:
@@ -40,33 +34,36 @@ jobs:
       - name: Identify package manager
         id: pkgman
         run: |
-          cache=`[ -f "vepic/vepic-main/pnpm-lock.yaml" ] && echo "pnpm" || ([ -f "vepic/vepic-main/package-lock.json" ] && echo "npm" || ([ -f "vepic/vepic-main/yarn.lock" ] && echo "yarn" || echo ""))`
-          package_manager=`[ ! -z "$cache" ] && echo "$cache" || echo "npm"`
+          cd vepic/vepic-main
+          cache=$( [ -f "pnpm-lock.yaml" ] && echo "pnpm" || ([ -f "package-lock.json" ] && echo "npm" || ([ -f "yarn.lock" ] && echo "yarn" || echo "")) )
+          package_manager=$( [ ! -z "$cache" ] && echo "$cache" || echo "npm" )
           echo "cache=$cache" >> $GITHUB_OUTPUT
           echo "package_manager=$package_manager" >> $GITHUB_OUTPUT
 
-      - uses: pnpm/action-setup@v4
+      - name: Install pnpm
         if: ${{ steps.pkgman.outputs.package_manager == 'pnpm' }}
-        name: Install pnpm
+        uses: pnpm/action-setup@v4
         id: pnpm-install
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          version: ${{ matrix.node }}
+          node-version: ${{ matrix.node }}
           cache: ${{ steps.pkgman.outputs.cache }}
 
       - name: Install dependencies
         run: ${{ steps.pkgman.outputs.package_manager }} install
 
-      - name: Generate
+      - name: Generate build
         run: ${{ steps.pkgman.outputs.package_manager }} run build
         env:
           NITRO_PRESET: github_pages
           NUXT_CONTENT_PREVIEW_API: https://api.nuxt.studio
-          
 
-      # Deployment job
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: vepic/vepic-main/.output/public
+
         with:
           folder: vepic/vepic-main/.output/public
