--- a/.github/workflows/studio.yml
+++ b/.github/workflows/studio.yml
@@ -1,4 +1,3 @@
-
 name: studio-nuxt-build
 run-name: studio nuxt build
 
@@ -6,6 +5,7 @@ on:
   push:
     branches:
       - 'main'
+
   workflow_dispatch:
 
 permissions:
@@ -17,15 +17,15 @@ concurrency:
 
 jobs:
   build-and-deploy:
-    runs-on: ${{ matrix.os }}
-    defaults:
-      run:
-        working-directory: vepic/vepic-main
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        os: [ubuntu-latest]
         node: [20]
+
+    defaults:
+      run:
+        working-directory: vepic/vepic-main
 
     steps:
       - name: Checkout
@@ -34,27 +34,25 @@ jobs:
       - name: Identify package manager
         id: pkgman
         run: |
-          cd vepic/vepic-main
-          cache=$( [ -f "pnpm-lock.yaml" ] && echo "pnpm" || ([ -f "package-lock.json" ] && echo "npm" || ([ -f "yarn.lock" ] && echo "yarn" || echo "")) )
+          cache=$( [ -f "vepic/vepic-main/pnpm-lock.yaml" ] && echo "pnpm" || ( [ -f "vepic/vepic-main/package-lock.json" ] && echo "npm" || ( [ -f "vepic/vepic-main/yarn.lock" ] && echo "yarn" || echo "" ) ) )
           package_manager=$( [ ! -z "$cache" ] && echo "$cache" || echo "npm" )
           echo "cache=$cache" >> $GITHUB_OUTPUT
           echo "package_manager=$package_manager" >> $GITHUB_OUTPUT
 
-      - name: Install pnpm
+      - uses: pnpm/action-setup@v4
         if: ${{ steps.pkgman.outputs.package_manager == 'pnpm' }}
-        uses: pnpm/action-setup@v4
-        id: pnpm-install
+        name: Install pnpm
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
           cache: ${{ steps.pkgman.outputs.cache }}
+          cache-dependency-path: vepic/vepic-main/package-lock.json
 
       - name: Install dependencies
         run: ${{ steps.pkgman.outputs.package_manager }} install
 
-      - name: Generate build
+      - name: Generate
         run: ${{ steps.pkgman.outputs.package_manager }} run build
         env:
           NITRO_PRESET: github_pages
@@ -63,5 +61,4 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages
           folder: vepic/vepic-main/.output/public
