--- a/.github/workflows/studio.yml
+++ b/.github/workflows/studio.yml
@@ -1,64 +1,33 @@
-name: studio-nuxt-build
-run-name: studio nuxt build
+name: Build and Deploy to GitHub Pages
 
 on:
   push:
     branches:
-      - 'main'
-
-  workflow_dispatch:
-
-permissions:
-  contents: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node: [20]
-
-    defaults:
-      run:
-        working-directory: vepic/vepic-main
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout Repo
+        uses: actions/checkout@v3
 
-      - name: Identify package manager
-        id: pkgman
-        run: |
-          cache=$( [ -f "vepic/vepic-main/pnpm-lock.yaml" ] && echo "pnpm" || ( [ -f "vepic/vepic-main/package-lock.json" ] && echo "npm" || ( [ -f "vepic/vepic-main/yarn.lock" ] && echo "yarn" || echo "" ) ) )
-          package_manager=$( [ ! -z "$cache" ] && echo "$cache" || echo "npm" )
-          echo "cache=$cache" >> $GITHUB_OUTPUT
-          echo "package_manager=$package_manager" >> $GITHUB_OUTPUT
-
-      - uses: pnpm/action-setup@v4
-        if: ${{ steps.pkgman.outputs.package_manager == 'pnpm' }}
-        name: Install pnpm
-
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node }}
-          cache: ${{ steps.pkgman.outputs.cache }}
-          cache-dependency-path: vepic/vepic-main/package-lock.json
+          node-version: '20'
 
-      - name: Install dependencies
-        run: ${{ steps.pkgman.outputs.package_manager }} install
+      - name: Install Dependencies
+        run: npm install
+        working-directory: ./vepic/vepic-main
 
-      - name: Generate
-        run: ${{ steps.pkgman.outputs.package_manager }} run build
-        env:
-          NITRO_PRESET: github_pages
-          NUXT_CONTENT_PREVIEW_API: https://api.nuxt.studio
+      - name: Generate Static Site
+        run: npm run generate
+        working-directory: ./vepic/vepic-main
 
-      - name: Deploy 🚀
+      - name: Deploy to GitHub Pages 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: vepic/vepic-main/.output/public
+          branch: gh-pages
+          folder: vepic/vepic-main/dist
